# Eu261

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  app.js  consent.js  index.html  intake.html  package-lock.json  pyproject.toml  requirements.txt  status.html  status.js  styles.css
.github/workflows/: claim-receiver.yml  draft.yml  eligibility.yml  escalate.yml  intake.yml  pages.yml  setup.yml  submit.yml  tests.yml  ukpolitics-update.yml
adapters/: __init__.py  base.py  easyjet.py  ryanair.py
engine/: airports.py  crypto.py  distance.py  drafter.py  eligibility.py  extractor.py  models.yaml  openrouter.py  receipts.py  state.py
engine/data/: airports.csv
examples/: sample_facts.json
nebs/: uk_caa.py
rules/: eu261-v1.yaml  eu261-v2-draft.yaml  limitation-by-country.yaml
scripts/: decrypt_pii.py  intake_rewrite.py  run_draft.py  run_eligibility.py  run_escalate.py  run_submit.py  write_status.py
site/: app.js  consent.js  index.html  intake.html  status.html  status.js  styles.css
status/: .gitkeep  1.json  14.json  15.json  16.json  2.json  20.json  21.json  22.json  3.json  4.json
tests/: test_crypto.py  test_distance.py  test_drafter.py  test_eligibility.py  test_extractor.py  test_frontend_html.py  test_scripts.py  test_state.py
tests/site/: app.test.js
ukpolitics/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
ukpolitics/app/: globals.css  layout.tsx  page.tsx
ukpolitics/components/: CommentaryPanel.tsx  ConfidenceIndicator.tsx  Header.tsx  MovementIndicator.tsx  PoliticalMatrix.tsx  (+3 more)
(+50 files in other folders)
