[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eu261-agent"
version = "0.1.0"
description = "EU261 flight delay compensation claim agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "PyNaCl>=1.5",
    "PyJWT>=2.8",
    "geographiclib>=2.0",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: requires live external credentials (deselect with -m 'not live')"]

[tool.hatch.build.targets.wheel]
packages = ["engine", "workflows_lib", "adapters_runtime", "api"]
